--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,10 @@
-/* General styles for the HomePage */
+
 .home-container {
   background-color: #f7f7f7;
   overflow-x: hidden;
 }
 
-/* Main Section Styles */
-/* Main Hero Section */
+
 .hero-section {
   display: flex;
   justify-content: center;
@@ -15,7 +14,6 @@
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   padding: 2rem 0;
   position: relative;
-  animation: fadeIn 1s ease-out;
 }
 
 /* Hero content layout */
@@ -24,8 +22,8 @@
   max-width: 1200px;
   text-align: center;
   margin-top: -15vw;
-  position: relative;
-  z-index: 1;
+  position: relative; 
+  z-index: 2; 
 }
 
 /* Hero heading styles */
@@ -63,7 +61,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10%;
-  z-index: 0;
+  z-index: 1; /* Ensure the images have a lower z-index */
 }
 
 .hero-image {
